# oss-spec

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  OSS_SPEC.md  README.md  SECURITY.md
.github/lighthouse/: lighthouserc.json
.github/workflows/: ci.yml  lighthouse.yml  pages.yml  release.yml  seo.yml
docs/: architecture.md  configuration.md  getting-started.md  troubleshooting.md
docs/agent/: debug-agent.txt  help-agent.txt
examples/bootstrap-rust-cli/: README.md
man/: oss-spec.md
prompts/draft-readme-why/: 1_0.md  1_0_0.md
prompts/file-conformance-issues/: 1_0.md  1_0_0.md  1_0_1.md
prompts/fix-conformance/: 1_0.md  1_0_0.md  1_1_0.md  1_2_0.md  1_3_0.md
prompts/interpret-prompt/: 1_0.md  1_0_0.md
prompts/tailor-init/: 1_0_0.md
prompts/validate-sh-agent/: 1_0_0.md  1_1_0.md
prompts/verify-conformance/: 1_0.md  1_0_0.md  1_0_1.md  1_1_0.md
scripts/: release.sh  update-versions.sh  validate.sh
src/: agent_help.rs  ai.rs  bootstrap.rs  check.rs  cli.rs  embedded.rs  fix.rs  git.rs  interview.rs  lib.rs  main.rs  manifest.rs  output.rs  prompts.rs  render.rs  tailor.rs  validate.rs
src/validate/: agent_skills.rs  content.rs  mod.rs  structural.rs  toolchain.rs
templates/_common/: .gitignore.tmpl  AGENTS.md.tmpl  CONTRIBUTING.md.tmpl  OSS_SPEC.md  (+3 more)
tests/: bootstrap_smoke.rs  bootstrap_smoke_test.rs  check_test.rs  github_clone_check.rs  github_clone_test.rs  prompts_test.rs  self_conformance_test.rs  tailor_test.rs  validate_test.rs
website/: index.html  package-lock.json  package.json  vite.config.ts
(+70 files in other folders)
