[package]
name = "oss-spec"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Bootstrap new open source repositories that conform to OSS_SPEC.md, with optional AI-driven project interpretation via zag."
repository = "https://github.com/niclaslindstedt/oss-spec"
homepage = "https://github.com/niclaslindstedt/oss-spec"
readme = "README.md"
keywords = ["bootstrap", "scaffold", "oss", "cli", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "oss-spec"
path = "src/main.rs"

[lib]
name = "oss_spec"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.16"
dialoguer = "0.11"
include_dir = "0.7"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util"] }
zag = "0.12"
indicatif = "0.17"
log = "0.4"
fern = "0.7"
dirs = "5"
chrono = "0.4"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
